代码优化，新增接口